# LearnMultiMedia

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image-processor.cpp  looper.cpp  looper.h  native-codec-jni.cpp  opencv-jni.cpp
app/src/main/cpp/opencv_4.8/sdk/native/jni/: OpenCVConfig.cmake
app/src/main/cpp/opencv_4.8/sdk/native/jni/abi-arm64-v8a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
app/src/main/cpp/opencv_4.8/sdk/native/jni/include/opencv2/: cvconfig.h
app/src/main/cpp/opencv_4.8/sdk/native/jni/include/opencv2/core/: ocl.hpp
app/src/main/java/: VideoRecordActivity.kt
app/src/main/java/com/tainzhi/sample/media/: MApp.kt  (+9 more)
app/src/main/res/animator/: revert_roate_x.xml  roate_x.xml
app/src/main/res/color/: bc_choose_action.xml  bc_control_bar_item.xml  surface_dark_medium.xml
app/src/main/res/drawable/: bg_round_white.xml  border.xml  btn_overlay_medium_container.xml  btn_record_start.xml  btn_record_stop.xml  btn_shutter_background.xml  btn_take_picture.xml  btn_take_picture_normal.xml  btn_take_picture_pressed.xml  circle_gray_background.xml  circular_button_background.xml  ic_change_camera.xml  ic_close.xml  ic_fast_forward_black_24dp.xml  ic_fast_rewind_black_24dp.xml  ic_filter.xml  ic_filter_selected.xml  ic_flip_camera.xml  ic_hdr_off.xml  ic_hdr_on.xml  ic_play.xml  ic_ratio_16x9.xml  ic_ratio_1x1.xml  ic_ratio_3x4.xml  ic_ratio_4x3.xml  ic_ratio_9x16.xml  ic_ratio_full.xml  settings_gear.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_audio_record_play.xml  activity_ball.xml  activity_battery_stats_sub.xml  activity_battery_test.xml  activity_camera.xml  activity_camera_preview.xml  activity_cylinder.xml  activity_draw_image.xml  activity_image_g_l_render.xml  activity_image_glrender.xml  activity_native_codec.xml  activity_opengl_triangle.xml  activity_paint_point.xml  activity_play.xml  activity_rotate_triangle_g_l_surface_view.xml  activity_settings.xml  activity_video_record.xml  content_audio_record_play.xml  content_draw_image.xml  content_main.xml  content_video_record.xml  fragment_camera2_basic.xml  item_filter.xml  item_main.xml  main_item.xml  vstub_camera_filter.xml  vstub_control_bar.xml  vstub_control_bar_ratio.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/raw/: frame_fs.frag  frame_glfs.txt  frame_glvs.txt  frame_vs.vert  preview_blur_fs.frag  preview_blur_vs.vert  preview_fs.frag  preview_vs.vert
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: root_preferences.xml
gradle/wrapper/: gradle-wrapper.properties
(+144 files in other folders)
